封装出了c接口层，修改了mrpc抽象，虽然还是很抽象，慢慢来

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,22 +1,54 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name="rpc_client",
-    srcs=[
-        "client/client.cc",
-        "client/client.h",
-    ],
-    deps=[
-        "@nlohmann_json//:json",
-        "@boost.asio//:boost.asio",
-        ":common",
-    ],
+    name = "mrpc_core",
+    srcs = ["mrpc.cc"],
     visibility = ["//visibility:public"],
+    deps = [
+        ":rpc_client",
+        "//:mrpc_headers",
+    ],
 )
 
 cc_library(
-    name="common",
+    name = "rpc_client",
+    srcs = [
+        "client/client.cc",
+    ],
+    hdrs = [
+        "client/client.h",
+        "client/target.h",
+    ],
+    visibility = ["//visibility:__pkg__"],
+    deps = [
+        ":client_channel",
+        ":common",
+    ],
+)
+
+cc_library(
+    name = "common",
     srcs = glob(["common/*.cc"]),
     hdrs = glob(["common/*.h"]),
-    visibility = ["//visibility:public"],
+    visibility = ["//visibility:__pkg__"],
+    deps = [
+        "@boost.asio//:boost.asio",
+        "@nlohmann_json//:json",
+    ],
+)
+
+cc_library(
+    name = "client_channel",
+    srcs = [
+        "client/channel.cc",
+    ],
+    hdrs = [
+        "client/channel.h",
+        "client/target.h",
+    ],
+    visibility = ["//visibility:__pkg__"],
+    deps = [
+        ":common",
+        "//:mrpc_headers",
+    ],
 )
