--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -1,16 +1,6 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name = "mrpc_core",
-    srcs = ["mrpc.cc"],
-    visibility = ["//visibility:public"],
-    deps = [
-        ":rpc_client",
-        "//:mrpc_headers",
-    ],
-)
-
-cc_library(
     name = "rpc_client",
     srcs = [
         "client/client.cc",
@@ -19,21 +9,10 @@ cc_library(
         "client/client.h",
         "client/target.h",
     ],
-    visibility = ["//visibility:__pkg__"],
+    visibility = ["//visibility:public"],
     deps = [
         ":client_channel",
         ":common",
-    ],
-)
-
-cc_library(
-    name = "common",
-    srcs = glob(["common/*.cc"]),
-    hdrs = glob(["common/*.h"]),
-    visibility = ["//visibility:__pkg__"],
-    deps = [
-        "@boost.asio//:boost.asio",
-        "@nlohmann_json//:json",
     ],
 )
 
@@ -49,6 +28,13 @@ cc_library(
     visibility = ["//visibility:__pkg__"],
     deps = [
         ":common",
-        "//:mrpc_headers",
+        "@boost.asio//:boost.asio",
+        "//:mrpc_core_headers",
     ],
+)
+
+cc_library(
+    name = "common",
+    hdrs = ["common/c_cpp_trans.h"],
+    visibility = ["//visibility:__pkg__"],
 )
