--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,7 @@ module(name = "mrpc", version = "0.0.1")
 
 bazel_dep(name = "nlohmann_json", version = "3.12.0")
 bazel_dep(name = "boost.asio", version = "1.87.0")
+bazel_dep(name = "boost.uuid", version = "1.87.0")
 bazel_dep(name = "yaml-cpp", version = "0.8.0")
 bazel_dep(name = "rules_cc", version = "0.1.2")
 
