--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -1,4 +1,18 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
+
+cc_binary(
+    name = "librpc_client.so",
+    srcs = [":rpc_client"],
+    linkopts = ["-Wl,--export-dynamic"],
+    linkshared = True,
+    # linkstatic = True,
+    visibility = [
+        "//visibility:public",
+    ],
+    deps = [
+        ":rpc_client",
+    ],
+)
 
 cc_library(
     name = "rpc_client",
@@ -9,10 +23,12 @@ cc_library(
         "client/client.h",
         "client/target.h",
     ],
+    linkstatic = True,
     visibility = ["//visibility:public"],
     deps = [
         ":client_channel",
     ],
+    alwayslink = True,
 )
 
 cc_library(
@@ -28,7 +44,9 @@ cc_library(
     deps = [
         ":common",
         "@boost.asio//:boost.asio",
+        # "@python3_12//:python_headers",
     ],
+    # alwayslink = True,
 )
 
 cc_library(
@@ -37,4 +55,5 @@ cc_library(
     hdrs = ["common/c_cpp_trans.h"],
     visibility = ["//visibility:__pkg__"],
     deps = ["//:mrpc_core_headers"],
+    alwayslink = True,
 )
