--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,10 +5,18 @@ module(name = "mrpc", version = "0.0.1")
 
 bazel_dep(name = "nlohmann_json", version = "3.12.0")
 bazel_dep(name = "boost.asio", version = "1.87.0")
-bazel_dep(name = "boost.uuid", version = "1.87.0")
 bazel_dep(name = "yaml-cpp", version = "0.8.0")
 bazel_dep(name = "rules_cc", version = "0.1.2")
 bazel_dep(name = "rules_go", version = "0.55.1")
+bazel_dep(name = "rules_python", version = "1.5.1")
+bazel_dep(name = "bazel_skylib", version = "1.8.1")
+
+new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")
+new_local_repository(
+    name = "python3_12",
+    path = "/usr/include/python3.12",
+    build_file = "python.BUILD",
+)
 
 # Hedron's Compile Commands Extractor for Bazel
 # https://github.com/hedronvision/bazel-compile-commands-extractor
