--- a/example/helloworld/cpp/BUILD
+++ b/example/helloworld/cpp/BUILD
@@ -2,9 +2,12 @@ load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
 
 cc_binary(
     name = "greeter_server",
-    srcs = ["greeter_server.cc"],
+    srcs = [
+        "greeter_server.cc",
+        "helloworld.mrpc.h",
+    ],
     deps = [
-        "@boost.asio//:boost.asio",
+        "//:mrpc-cpp-server",
         "@nlohmann_json//:json",
     ],
 )
