大面积修改ai生成的代码，ai写的东西很不优雅，谨慎让ai生成的代码进入开源项目是有道理的

--- a/example/helloworld/cpp/BUILD
+++ b/example/helloworld/cpp/BUILD
@@ -1,18 +1,4 @@
 load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
-load("@rules_cc//cc:cc_library.bzl", "cc_library")
-
-cc_library(
-    name = "hello_handler",
-    srcs = ["hello_handler.cc"],
-    hdrs = [
-        "hello_handler.h",
-        "helloworld.mrpc.h",
-    ],
-    deps = [
-        "//:mrpc-cpp-server",
-        "@nlohmann_json//:json",
-    ],
-)
 
 cc_binary(
     name = "greeter_server",
@@ -21,9 +7,7 @@ cc_binary(
         "helloworld.mrpc.h",
     ],
     deps = [
-        ":hello_handler",
-        "//:mrpc-cpp-server",
-        "@nlohmann_json//:json",
+        "//:mrpc-cpp",
     ],
 )
 
